Fix card icons Align card icons along the same axes

--- a/style.css
+++ b/style.css
@@ -255,6 +255,8 @@ img[alt = "dashboard"] {
     justify-content: flex-end;
     align-items: flex-end;
     height: 50px;
+    margin-top: auto;
+    margin-bottom: 15px;
 }
 
 .card-buttons img {
